<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wlbackground06_mobile"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
          android:layout_width="match_parent"
         android:layout_height="80dp"
        android:gravity="center"
          android:textSize="24sp"
          android:textStyle="bold" />

    <TextView
          android:layout_width="match_parent"
          android:layout_height="30dp"
            android:text="@string/main_name3"
           android:textSize="15sp"
            android:paddingTop="100dp"
            android:textStyle="italic" />

       <EditText
           android:id="@+id/editText1"
          android:layout_width="match_parent"
         android:layout_height="40dp"
        android:layout_marginTop="77dp"
           android:layout_marginLeft="50dp"
           android:layout_marginRight="50dp"
          android:ems="10"
         android:hint="@string/main_name4" >

             <requestFocus />
        </EditText>

        <EditText
           android:id="@+id/editText2"
           android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingTop="9dp"
            android:ems="10"
           android:hint="@string/main_name5"
            />


    <LinearLayout

             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:orientation="horizontal" >



             <Button
                 android:id="@+id/button1"
               android:layout_width="80dp"
                 android:layout_marginLeft="110dp"
                 android:layout_marginTop="20dp"
                 android:layout_height="23dp"
                 android:textSize="16dp"
                 android:background="@android:color/transparent"
                android:text="@string/main_name6"
                 android:clickable="true" />

           <Button
                android:id="@+id/button2"
                android:layout_width="80dp"

               android:layout_height="23dp"
               android:textSize="16dp"
               android:background="@android:color/transparent"
              android:text="@string/main_name7"
               android:layout_marginTop="20dp"
               android:clickable="true" />
         </LinearLayout>

         <TextView
            android:layout_width="match_parent"
          android:layout_height="50dp"
            />

     </LinearLayout>
