<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wlbackground06_mobile"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_width="173dp"
       android:layout_height="100dp"
        android:gravity="bottom" />

    <EditText
       android:id="@+id/etid"
       android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_name4"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp">

       <requestFocus />
     </EditText>

   <TextView
        android:layout_width="match_parent"
       android:layout_height="wrap_content"
        android:gravity="center"
       android:textColor="#3F597C"
       android:textSize="20sp"
       android:textStyle="italic" />

      <EditText
        android:id="@+id/etname"
      android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:ems="10"
       android:hint="@string/register_name5"
          android:layout_marginLeft="42dp"
          android:layout_marginRight="42dp" />

     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
          android:textColor="#B22222"
       android:textSize="20sp"
        android:textStyle="italic" />

    <LinearLayout
          android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="0.84"
        android:orientation="horizontal" >

        <Button
               android:id="@+id/btn_qu"
            android:layout_width="wrap_content"
           android:layout_height="wrap_content"
              android:text="@string/register_name6"
            android:background="@android:color/transparent"
            android:layout_marginLeft="96dp"
            android:textSize="16dp" />

            <Button
              android:id="@+id/btn_sure"
             android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
              android:text="@string/register_name7"
                android:textSize="16dp" />
       </LinearLayout>

</LinearLayout>
